force-app/main/default/objects/Price_Book_Item__c/Price_Book_Item__c.object-meta.xml
<CustomObject>
    <label>Price Book Item</label>
    <nameField>
        <label>Price Book Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Book Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>