force-app/main/default/objects/Price_Book_Item__c/fields/Price_Book_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item_Id__c</fullName>
    <label>Price Book Item Id</label>
    <type>AutoNumber</type>
</CustomField>