force-app/main/default/objects/Price_Book_Item__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricebook</label>
    <referenceTo>Pricebook__c</referenceTo>
    <relationshipLabel>Price Book Items</relationshipLabel>
    <relationshipName>Price_Book_Items</relationshipName>
    <type>Lookup</type>
</CustomField>